--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
   background-color: hsl(185, 75%, 39%);
   background-image: url("./images/bg-pattern-top.svg"),
     url("./images/bg-pattern-bottom.svg");
-  background-position: left -5vw top -50vh, right -5vw bottom -50vh;
+  background-position: left -5vmax top -25vmax, right -5vmax bottom -25vmax;
   background-repeat: no-repeat;
-  background-size: 100vh;
+  background-size: 100vmin;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,23 +18,7 @@ body {
   color: hsl(229, 23%, 23%);
 }
 
-.avatar {
-  border: 5px solid white;
-  border-radius: 50%;
-  margin: -53px auto 0;
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-  margin-top: 5px;
-  /* position: absolute;
-  bottom: 0; */
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-
+/* Card */
 .card {
   border-radius: 15px 15px 15px 15px;
   height: 375px;
@@ -66,6 +50,13 @@ body {
   padding: 0 5%;
 }
 
+/* Middle card content */
+.avatar {
+  border: 5px solid white;
+  border-radius: 50%;
+  margin: -53px auto 0;
+}
+
 .name {
   font-weight: 700;
   margin-bottom: 10px;
@@ -83,6 +74,7 @@ body {
   margin-top: 0;
 }
 
+/* Bottom card content */
 .stats {
   width: 25%;
   margin: 0 5%;
@@ -103,6 +95,16 @@ body {
   font-weight: 400;
   font-size: 10px;
   letter-spacing: 2px;
+}
+
+/* Attribution */
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  margin-top: 5px;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
 @media only screen and (max-width: 375px) {
