--- a/style.css
+++ b/style.css
@@ -41,12 +41,11 @@ body {
 }
 
 .card-bottom {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: white;
   border-radius: 0 0 15px 15px;
   height: 25%;
-  display: flex;
-  justify-content: center;
-  text-align: center;
   padding: 0 5%;
 }
 
@@ -76,22 +75,19 @@ body {
 
 /* Bottom card content */
 .stats {
-  width: 25%;
-  margin: 0 5%;
+  text-align: center;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
 }
 
 .stats-value {
-  display: block;
   font-weight: 700;
   margin-bottom: 5px;
 }
 
 .stats-name {
-  display: block;
   font-weight: 400;
   font-size: 10px;
   letter-spacing: 2px;
@@ -107,9 +103,9 @@ body {
   color: hsl(228, 45%, 44%);
 }
 
-@media only screen and (max-width: 375px) {
+/* @media only screen and (max-width: 375px) {
   body {
     background-position: left -50vh top -40vh, right -50vh bottom -40vh;
     background-size: 150vw;
   }
-}
+} */
