--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
   background-color: hsl(185, 75%, 39%);
   background-image: url("./images/bg-pattern-top.svg"),
     url("./images/bg-pattern-bottom.svg");
-  background-position: left -5vmax top -25vmax, right -5vmax bottom -25vmax;
+  background-position: left -50vw top -50vw, right -50vw bottom -50vw;
   background-repeat: no-repeat;
-  background-size: 100vmin;
+  background-size: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,15 +97,15 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 10px;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
 
-/* @media only screen and (max-width: 375px) {
+@media only screen and (min-width: 1000px) {
   body {
-    background-position: left -50vh top -40vh, right -50vh bottom -40vh;
-    background-size: 150vw;
+    background-position: left -10vw top -25vw, right -10vw bottom -25vw;
+    background-size: 55vw;
   }
-} */
+}
